--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,10 +1,45 @@
-.card{
+.slider{
+    max-width: 40rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    width: 30%;
-    
+}
+.carousel{
+    cursor: grab;
+    overflow: hidden;
+}
+
+.inner{
+    display: flex;
+   
+}
+.image{
+    min-height: 12.5rem;
+    min-width: 12.5rem;
+
+    padding: 1rem;
+}
+.image img{
+    width: 100%;
+    height: 90%;
     border-radius: 1rem;
-    background-color: rgba(0, 0, 0, 0.205);
+    pointer-events: none;
+}
+
+@media (max-width: 1100px){
+    .slider{
+        max-width: 30rem;
+    }
+}
+
+@media (max-width: 900px){
+    .slider{
+        max-width: 25rem;
+    }
+}
+@media (max-width: 500px){
+   .slider{
+        width: 100%;
+   }
+    
 }
