--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,29 +1,35 @@
 .conteiner_header{
     width: 100%;
-    height: 80%;
+    min-height: 70%;
 
-    text-align: center;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
 
     background-image: url('../../assets/336719527_577224567479169_5260847337829005916_n.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
 
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .conteiner_header h1{
     font-family: sans-serif;
+
     color: #fff;
-    margin-bottom: 2.5rem;
+    background-color: rgba(0, 0, 0, 0.205);
+    
+    border-radius: 1rem;
 }
 
-.conteiner_cards{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 70%;
-    width: 100%;
-    color: #fff;
-
-    gap: 1rem;
-} 
+@media (max-width: 800px){
+    h1{
+        font-size: 1.5rem;
+    }    
+ }
+ @media (max-width: 500px){
+    h1{
+        width: 90%;
+        font-size: 1rem;
+    }    
+ }
