--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -1,11 +1,10 @@
 .conteiner_layout{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     flex-direction: column;
 
     height: 100vh;
-    width: 100vw;
-
-    padding-bottom: 1rem;
+    width: 100vw;   
 }
 
